# zylo

./: .gitignore  Cargo.toml  MANUAL.md  README.md  USAGE.md  UzExt.pas  _asset.go  _config.yml  _toast.go  action.yaml  go.mod  go.sum  launch.yaml  manual.md  market.list  market.toml  master.toml  schema.yaml  setup.bat  setup.ps1  zbuild.rs  zutils.go  zutils.h  zylo.go  zylo.pas
.github/workflows/: build.yaml  clean.yaml  store.yaml
commons/: go.mod
commons/morse/: cluster.go  cw_test.go  decoder.go  encoder.go  symbols.go
commons/reiwa/: zylo.go
commons/win32/: winc.go
docs/: _config.yaml  _reiwa.md  index.md
markets/: rules.toml  utils.toml
rules/format/: README.md  format.go  qxsl.fmt  qxsl.url
rules/hstest/: README.md  hstest.cfg  hstest.go
rules/latest/: README.md  latest.go
rules/rttest/: README.md  rttest.cfg  rttest.go  rtview.go
rules/tmtest/: tmtest.cfg  tmtest.go
rules/toasty/: README.md  toasty.cfg
rules/yltest/: README.md  yltest.cfg  yltest.go
src/: main.rs  schema.yaml  zylo.go  zylo.md
src/commons/: go.mod
src/commons/reiwa/: zylo.go
src/manuals/: _config.yaml  _morse.md  _reiwa.md  _win32.md  index.md
src/markets/: rules.toml  utils.toml
src/toolkit/: market.list  market.toml  schema.yaml  zbuild.go  zbuild.rs
utils/toasty/: toasty.cfg  toasty.go
web/: _config.yaml  builds.html  index.html  index.md  issues.html  lesson.md  manual.html  manual.md  market.html
zbuild/: Cargo.toml  INSTALL.yaml  REPLACE.yaml  _build.go  zbuild.go
zbuild/src/: go.mod.opts  main.rs  market.list  schema.yaml  zutils.go  zylo.go
(+52 files in other folders)
