[package]
name = 'zbuild'
version = '0.0.1'
authors = ['JA1ZLO <nextzlog@gmail.com>']
edition = '2021'

[dependencies]
argopt = '*'
itertools = '*'
jsonschema = '*'
md5 = '*'
minijinja = '*'
reqwest = {version = '*', features=['blocking']}
serde-transcode = '*'
serde_json = '*'
serde_yaml = '*'
structopt = '*'
toml = '0.5.*'
version-compare = '*'
